# woppleblox

./: .gitignore  Cargo.toml  README.md  build
wopplebloxd/: Cargo.toml  db.sql
wopplebloxd/migrations/: V1__initial.sql
wopplebloxd/src/: global_state.rs  http_server.rs  main.rs  settings.rs  templates.rs
wopplebloxd/src/data_utils/: password.rs
wopplebloxd/src/db/: Alias.rs  Attachment.rs  Post.rs  User.rs  definitions.rs  migrations.rs  mod.rs
wopplebloxd/src/db/dataclasses/: alias.rs  attachment.rs  mod.rs  post.rs  user.rs
wopplebloxd/src/db/repositories/: alias_repository.rs  attachment_repository.rs  mod.rs  post_repository.rs  user_repository.rs
wopplebloxd/src/helpers_actix/: header_map.rs  http_request.rs  mod.rs
wopplebloxd/src/helpers_data/: db_conn.rs  mod.rs
wopplebloxd/src/helpers_misc/: mod.rs
wopplebloxd/src/helpers_templating/: mod.rs
wopplebloxd/src/http_server/: global_state.rs  handlers.rs  mod.rs
wopplebloxd/src/http_server/handlers/: static_files.rs
wopplebloxd/src/http_server/middleware/: login.rs
wopplebloxd/src/http_server/routes/: mod.rs  route_firstrun.rs
wopplebloxd/src/intl/: embedded_files.rs  macros.rs  mod.rs
wopplebloxd/src/settings/: definitions.rs
wopplebloxd/src/state/: global_state.rs  mod.rs
wopplebloxd/src/views/: firstrun.rs  login.rs  mod.rs
wopplebloxd/static/: test.html
wopplebloxd/static/theme/: main.css
wopplebloxd/templates/: firstrun.html  index.html  login.html  post.html  user-profile.html
