[package]
name = "wopplebloxd"
version = "0.1.0"
authors = ["Starbeamrainbowlabs <sbrl@starbeamrainbowlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }	# Serialisation
serde_derive = "1.0"	# Serialisation helper
toml = "0.5"			# TOML serialisation module

clap = "2.33"			# CLI argument parser

actix-web = "2.0"		# Web framework
actix-rt = "1.0"		# Who knows?
# actix-service = "1.0"

futures = "*"

rust-embed = "5.2.0"	# Embedded files
mime_guess = "2"		# File type extension -> mime type converter
yarte = "0.7"			# Templating library

# futures = "0.3"			# Like JS Promises but in Rust, apparently

# Database ORM
# diesel = { version = "1.0.0", features = ["sqlite"] }
# schemamama = "*"
# schemamama_rusqlite = "*"
rusqlite = "0.21.0"
r2d2 = "0.8.8"
r2d2_sqlite = "0.14.0"
refinery = "0.2.1"

chrono = "0.4.11"

log = "0.4"			# Apparently Rust has an entire logging setup - this is the base crate
pretty_env_logger = "0.4"	# The logging implementation we've chosen for the above
