[package]
name = "wopplebloxd"
version = "0.1.0"
authors = ["Starbeamrainbowlabs <sbrl@starbeamrainbowlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }	# Serialisation
serde_derive = "1.0"	# Serialisation helper
toml = "0.5"			# TOML serialisation module

clap = "2.33"			# CLI argument parser

actix-web = "2.0"		# Web framework
actix-rt = "1.0"		# Who knows?
# actix-service = "1.0"

futures = "*"			# Like JS Promises but in Rust, apparently

rust-embed = "5.2.0"	# Embedded files
mime_guess = "2"		# File type extension -> mime type converter
yarte = "0.7"			# Templating library

unic-langid = { version = "0.8.0", features = ["macros"] }	# Language id handling
fluent = "0.11.0"		# Translations

# Database ORM
# diesel = { version = "1.0.0", features = ["sqlite"] }
# schemamama = "*"
# schemamama_rusqlite = "*"
rusqlite = { version = "0.21.0", features = ["chrono"] }		# SQLite
r2d2 = "0.8.8"					# Connection pooling
r2d2_sqlite = "0.14.0"			# Connection pooling
serde_rusqlite = "0.23.0"		# Easy de/serialisation to/from Rust types when talking to an SQLite database 
refinery = { version = "0.2.1", features = ["rusqlite"] }		# DB migrations
pinto = "0.6.1"					# SQL query builder

chrono = { version = "0.4.11", features = ["serde"] }			# Datetime handling library

argonautica = { version = "0.2", features = ["serde", "simd"] }	# Password hashing
# regex = "1"		# Regex support

log = "0.4"			# Apparently Rust has an entire logging setup - this is the base crate
pretty_env_logger = "0.4"	# The logging implementation we've chosen for the above
