[package]
name = "wopplebloxd"
version = "0.1.0"
authors = ["Starbeamrainbowlabs <sbrl@starbeamrainbowlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }	# Serialisation
serde_derive = "1.0"	# Serialisation helper
toml = "0.5"			# TOML serialisation module

clap = "2"				# CLI argument parser

# num_cpus = "1.12.0"
# actix = "0.9.0"		# ?
actix-web = "3"			# Web framework
actix-rt = "1"			# Who knows?
actix-service = "1"	# Middleware, I think

futures = "*"			# Like JS Promises but in Rust, apparently

rust-embed = "5.2"	# Embedded files
mime_guess = "2"		# File type extension -> mime type converter
yarte = { version = "0.12" }	# Templating library

unic-langid = { version = "0.9", features = ["macros"] }	# Language id handling
fluent = "0.13"			# Translations
accept-language = "2.0.0"	# Accept-language header parsing

# Database ORM
# diesel = { version = "1.0.0", features = ["sqlite"] }
# schemamama = "*"
# schemamama_rusqlite = "*"
rusqlite = { version = "0.24", features = ["chrono"] }		# SQLite
r2d2 = "0.8"					# Connection pooling
r2d2_sqlite = "0.17"			# Connection pooling
serde_rusqlite = "0.26"			# Easy de/serialisation to/from Rust types when talking to an SQLite database 
refinery = { version = "0.3", features = ["rusqlite"] }		# DB migrations
pinto = "0.6"					# SQL query builder

chrono = { version = "0.4", features = ["serde"] }			# Datetime handling library

argonautica = { version = "0.2", features = ["serde", "simd"] }	# Password hashing
# regex = "1"		# Regex support

log = "0.4"			# Apparently Rust has an entire logging setup - this is the base crate
pretty_env_logger = "0.4"	# The logging implementation we've chosen for the above
